--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="apprentice.hr.app" >
+    package="apprentice.hr.app">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HR_APP" >
+        android:theme="@style/Theme.HR_APP">
+
         <activity
-            android:name=".HomePageActivity"
+            android:name=".AddCandidateActivity"
+            android:label="Add Candidate"
+            android:parentActivityName=".HomePageActivity"
             android:exported="false" />
         <activity
+            android:name=".HomePageActivity"
+            android:exported="false"
+            android:label="Candidates List" />
+        <activity
             android:name=".InitialLoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
